tests/en/errors/empty_enum.salam
// EXPECT: E058
enum Empty:
end
func main: println ("x") end
